# study_notes

./: .gitignore
LoadDataToddr_and_GetDataFromddr/: Makefile  a.c  b.c  c.c
crc32/: Makefile  crc32.c
fifo/: FIFO.h  main.c
kill_signal/: kill_to_process.c
kill_signal/driver_to_process/: Makefile  hello_drv.c  kill_to_process.c
kill_signal/driver_to_progress/: Makefile  hello_drv.c
linked_list/: main.c
linked_list/double_linked_list/: Makefile  double_linked_list.h  main.c
linux_设备驱动/dev-demo/: Makefile  test.c
linux_设备驱动/dev-demo/inc/: driver-demo-pad.h  driver-demo.h
linux_设备驱动/dev-demo/src/: driver-demo-core.c  driver-demo-device.c  driver-demo-fs.c  driver-demo-fs1.c  driver-demo-libfunc.c  driver-demo-vic.c
linux_设备驱动/hello_world/hello_drv/: Makefile  hello_drv.c
linux_设备驱动/tx-isp-demo/: Makefile
linux_设备驱动/tx-isp-demo/inc/: tx-isp-libfunc.h  tx-isp-pad.h  tx-isp.h
linux_设备驱动/tx-isp-demo/src/: tx-isp-core.c  tx-isp-device.c  tx-isp-fs.c  tx-isp-fs1.c  tx-isp-libfunc.c  tx-isp-my.c  tx-isp-vic.c
mmap/: a.c
pointer/: main.c
private_and_callback/: Makefile  main.c  main.h
private_and_callback/lib/: a.c  makefile.mk
src_pipeline/: .gitignore  CMakeLists.txt
src_pipeline/sample/: CMakeLists.txt  sample-test.c
src_pipeline/src/: CMakeLists.txt  srcs.cmake
src_pipeline/src/core/: CMakeLists.txt  device.c  group.c  module.c  sys_core.c  sys_interface.c  vbm.c
src_pipeline/src/include/: constraints.h  imp_system.h
src_pipeline/src/include/dsystem/: funcs.h
src_pipeline/src/include/emulator/: imp_emu_encoder.h  imp_emu_framesource.h  imp_emu_isp.h
src_pipeline/src/include/imp/: imp_audio.h  imp_isp.h  imp_ivs.h
src_pipeline/src/include/isp/: demosaic.h  ncu_common.h
src_pipeline/src/include/protobuf-c/: NCU_Params.proto-c.pb-c.h  protobuf-c.h
src_pipeline/src/include/system/: device.h  group.h  imp_alloc.h  imp_error.h  imp_v4l2.h  ivspmon.h  module.h  system.h  vbm.h
src_pipeline/src/include/video/: encoder.h
tx-isp-demo/: Makefile  test.c
tx-isp-demo/inc/: tx-isp.h
tx-isp-demo/src/: tx-isp-core.c  tx-isp-device.c  tx-isp-vic.c
union使用/: a.c
截取二进制文件部分内容生成新的二进制文件/: a.c
生成bin和解析bin/: 解析.c
