#It seems must set compiler at first
SET(CMAKE_SYSTEM_NAME Linux)
SET(CMAKE_CROSS_COMPILER "mips-linux-gnu-")
SET(CMAKE_C_COMPILER "${CMAKE_CROSS_COMPILER}gcc")
SET(CMAKE_CXX_COMPILER "${CMAKE_CROSS_COMPILER}g++")

CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

#SET(CMAKE_CXX_COMPILER "mips-linux-gnu-g++")
SET(CMAKE_C_FLAGS "-Os -Wall -march=mips32r2")
SET(CMAKE_CXX_FLAGS "-Os -Wall -march=mips32r2 -std=c++11")

SET(LIB_INSTALL_DIR_GLIBC lib/glibc)
SET(LIB_INSTALL_DIR_UCLIBC lib/uclibc)
SET(BIN_INSTALL_DIR_GLIBC bin/glibc)
SET(BIN_INSTALL_DIR_UCLIBC bin/uclibc)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/include/})

#ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(sample)
